--- a/backend/package.json
+++ b/backend/package.json
@@ -15,12 +15,18 @@
   "type": "module",
   "dependencies": {
     "@prisma/client": "^6.16.1",
+    "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
+    "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.4.0",
     "prisma": "^6.16.1",
     "ts-node": "^10.9.2",
